[package]
name = "game-template"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiled = { path = "include/tiled/" }
geometry = { path = "include/geometry/" }
sdl-helper = { path = "include/sdl-helper"}
