[package]
name = "nze_game_sdl"
version = "0.1.0"
authors = ["NoamZeise"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/NoamZeise/nze-game-sdl"
readme  = "README.md"
description = "A framework for making 2D games, built on SDL2"
exclude = ["resources/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nze_geometry = { path = "lib/nze_geometry/", version = "0.1.0"}
nze_tiled = { path = "lib/nze_tiled/", version = "0.1.0"}
sdl2 = { version = "0.35", features = ["ttf", "image", "mixer"] }