[package]
name = "nze_tiled"
version = "0.1.0"
authors = ["NoamZeise"]
license = "MIT OR Apache-2.0"	
edition = "2021"
exclude = ["test-resources/*"]
repository = "https://github.com/NoamZeise/nze-game-sdl"
description = "Loads maps made with the map editor Tiled"

[dependencies]
quick-xml = "0.24.0"
nze_geometry = {path = "../nze_geometry"}